# FndAvgCpp

./: CMakeLists.txt  README.md  app.rc  main.cpp
.github/workflows/: code_quality.yml  qodana_code_quality.yml
